--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        {% block stylesheets %}
+            {% if app.environment == 'dev' %}
+                <link rel="stylesheet" href="{{ asset('lib/bootstrap/4.5.0/css/bootstrap.css') }}" />
+            {% else %}
+                <link rel="stylesheet" href="{{ asset('lib/bootstrap/4.5.0/css/bootstrap.min.css') }}" />
+            {% endif %}
+
+            {% block substylesheets %}{% endblock %}
+        {% endblock %}
+
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
     </head>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+        {% block javascripts %}
+            {% if app.environment == 'dev' %}
+                <script src="{{ asset('lib/jQuery/jquery-3.5.1.slim.js') }}"></script>
+                <script src="{{ asset('lib/popper/2.4.0/popper.js') }}"></script>
+                <script src="{{ asset('lib/bootstrap/4.5.0/js/bootstrap.js') }}"></script>
+            {% else %}
+                <script src="{{ asset('lib/jQuery/jquery-3.5.1.slim.min.js') }}"></script>
+                <script src="{{ asset('lib/popper/2.4.0/popper.min.js') }}"></script>
+                <script src="{{ asset('lib/bootstrap/4.5.0/js/bootstrap.min.js') }}"></script>
+            {% endif %}
+
+            {% block subjavascripts %}{% endblock %}
+        {% endblock %}
     </body>
 </html>
