--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6211,7 +6211,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #1abc9c !important
+    background-color: #135d82 !important
 }
 
 a.bg-primary:focus, a.bg-primary:hover, button.bg-primary:focus, button.bg-primary:hover {
@@ -9895,12 +9895,12 @@ a.text-dark:focus, a.text-dark:hover {
 
 @media (min-width: 992px) {
     .masthead {
-        padding-top: calc(6rem + 104px);
-        padding-bottom: 6rem
+        padding-top: calc(6rem + 30px);
+        padding-bottom: 2rem
     }
 
     .masthead .masthead-heading {
-        font-size: 4rem;
+        font-size: 3rem;
         line-height: 3.5rem
     }
 
