feat(view): Индексная страница

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,20 +1,50 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <!-- Переопределенное ядро бутсрапа-->
+    <link href="{{ asset('css/styles.css') }}" rel="stylesheet">
+    <!-- Переопределенные шрифты бутстрапа-->
+    <link rel="stylesheet" href="{{ asset('css/heading.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/body.css') }}">
+{% endblock %}
 {% block title %}Hello IndexController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/user413.test/httpdocs/src/Core/Controller/IndexController.php'|file_link(0) }}">src/Core/Controller/IndexController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/user413.test/httpdocs/templates/controller/index/index.html.twig'|file_link(0) }}">templates/controller/index/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <img alt="Brand" src="{{ asset('img/logo.png') }}" height="45px"> Quick Dive</a>
+            <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded"
+                    type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i
+                        class="fas fa-bars"></i></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                                                         href="#im">МОЯ РОЛЬ В КОМАНДЕ</a>
+                    </li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                                                         href="#docs">СОПУТСТВУЮЩИЕ ДОКУМЕНТЫ</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <header class="masthead bg-primary text-white text-center">
+        <div class="container d-flex align-items-center flex-column">
+            <h1 class="masthead-heading mb-0">ИНЖЕНЕР-ПРОГРАММИСТ</h1>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- Masthead Subheading-->
+            <p class="pre-wrap masthead-subheading font-weight-light mb-0">Отдел разработки и внедрения информационных систем</p>
+        </div>
+    </header>
+{% endblock %}
+{% block subjavascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/scripts.js') }}"></script>
 {% endblock %}
