--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -32,7 +32,7 @@
                                                          href="#liability">ОТВЕТСТВЕННОСТЬ</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                                         href="#docs">СОПУТСТВУЮЩИЕ ДОКУМЕНТЫ</a>
+                                                         href="#docs">ДОПОЛНИТЕЛЬНЫЯ ИНФОРМАЦИЯ</a>
                     </li>
                 </ul>
             </div>
@@ -61,6 +61,7 @@
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
+                    <p><span data-toggle="modal" data-target="#modalDesctiptionIm" class="moreButton">Подробнее</span></p>
                 </div>
                 <div class="col-md-6 col-lg-6 mb-6">
                     <img src="{{ asset('img/professional.jpg') }}" class="work-process">
@@ -72,9 +73,7 @@
     <section class="page-section" id="law">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-6 mb-6">
-                    <img src="{{ asset('img/prava.jpg') }}" class="work-process">
-                </div>
+
                 <div class="col-md-6 col-lg-6 mb-6 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Права<hr></h2>
                     <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
@@ -82,6 +81,10 @@
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
+                    <p><span data-toggle="modal" data-target="#modalDesctiptionLaw" class="moreButton">Подробнее</span></p>
+                </div>
+                <div class="col-md-6 col-lg-6 mb-6">
+                    <img src="{{ asset('img/prava.jpg') }}" class="work-process">
                 </div>
             </div>
         </div>
@@ -90,7 +93,6 @@
     <section class="page-section" id="liability">
         <div class="container">
             <div class="row justify-content-center">
-
                 <div class="col-md-6 col-lg-6 mb-6 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Ответственность<hr></h2>
                     <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
@@ -98,6 +100,7 @@
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
+                    <p><span data-toggle="modal" data-target="#modalDesctiptionLiability" class="moreButton">Подробнее</span></p>
                 </div>
                 <div class="col-md-6 col-lg-6 mb-6">
                     <img src="{{ asset('img/law.jpg') }}" class="work-process">
@@ -106,6 +109,88 @@
         </div>
     </section>
 
+    <!-- Portfolio Modal-->
+    <div class="portfolio-modal modal fade" id="modalDesctiptionIm" tabindex="-1" role="dialog" aria-labelledby="#modalDesctiptionImLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Должностные обязанности</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5" style="text-align: left">
+                                    1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
+                                    2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
+                                    3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
+                                    назначений; санитарно-гигиеническое содержание отделений больницы, одежды и белья больных; своевременность и качество дезинфекции помещений, где находились инфекционные больные.<br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div><!-- Portfolio Modal-->
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLaw" tabindex="-1" role="dialog" aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Права</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5" style="text-align: left">
+                                    1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
+                                    2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
+                                    3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
+                                    назначений; санитарно-гигиеническое содержание отделений больницы, одежды и белья больных; своевременность и качество дезинфекции помещений, где находились инфекционные больные.<br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="modalDesctiptionLiability" tabindex="-1" role="dialog" aria-labelledby="modalDesctiptionLiabilityLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h2 class="portfolio-modal-title text-secondary mb-0">Ответственность</h2>
+                                <!-- Icon Divider-->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <p class="mb-5" style="text-align: left">
+                                    1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
+                                    2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
+                                    3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
+                                    назначений; санитарно-гигиеническое содержание отделений больницы, одежды и белья больных; своевременность и качество дезинфекции помещений, где находились инфекционные больные.<br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 {% block subjavascripts %}
     {{ parent() }}
