feat(public): Вывод блока дополнительная информация и модальное окно для превью

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -32,7 +32,7 @@
                                                          href="#liability">ОТВЕТСТВЕННОСТЬ</a>
                     </li>
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                                                         href="#docs">ДОПОЛНИТЕЛЬНЫЯ ИНФОРМАЦИЯ</a>
+                                                         href="#addition">ДОПОЛНИТЕЛЬНЫЯ ИНФОРМАЦИЯ</a>
                     </li>
                 </ul>
             </div>
@@ -109,6 +109,87 @@
         </div>
     </section>
 
+    <section class="page-section" id="addition">
+        <div class="container">
+            <!-- Portfolio Section Heading-->
+            <div class="text-center">
+                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">ДОПОЛНИТЕЛЬНАЯ ИНФОРМАЦИЯ</h2>
+            </div>
+            <hr>
+            <div class="row justify-content-center">
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <div class="addition-item"  data-toggle="modal" data-target="#modalAdditianalItem1">
+                        <h2 class="title-addition-item">Должностная инструкция товаровед</h2>
+                    </div>
+                </div>
+
+                <div class="portfolio-modal modal fade" id="modalAdditianalItem1" tabindex="-1" role="dialog" aria-labelledby="#modalAdditianalItem1Label" aria-hidden="true">
+                    <div class="modal-dialog modal-xl" role="document">
+                        <div class="modal-content">
+                            <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                            <div class="modal-body text-center">
+                                <div class="container">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-8">
+                                            <!-- Portfolio Modal - Title-->
+                                            <h2 class="portfolio-modal-title text-secondary mb-0">Товаровед</h2>
+                                            <!-- Icon Divider-->
+                                            <div class="divider-custom">
+                                                <div class="divider-custom-line"></div>
+                                            </div>
+
+                                            <h3 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Должностные обязанности<hr></h3>
+                                            <div class="" style="text-align: left; font-size: 1.2rem">
+                                                <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
+                                                <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
+                                                <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
+                                                <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
+                                                <p>Определяет возможность использования готовых программных продуктов.</p>
+                                            </div>
+
+                                            <h3 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Права<hr></h3>
+                                            <div class="" style="text-align: left; font-size: 1.2rem">
+                                                <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
+                                                <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
+                                                <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
+                                                <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
+                                                <p>Определяет возможность использования готовых программных продуктов.</p>
+                                            </div>
+
+                                            <h3 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Ответственность<hr></h3>
+                                            <div class="" style="text-align: left; font-size: 1.2rem">
+                                                <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
+                                                <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
+                                                <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
+                                                <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
+                                                <p>Определяет возможность использования готовых программных продуктов.</p>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <div class="addition-item">
+                        <h2 class="title-addition-item">Должностная инструкция товаровед</h2>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <div class="addition-item">
+                        <h2 class="title-addition-item">Должностная инструкция товаровед</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Portfolio Modal-->
     <div class="portfolio-modal modal fade" id="modalDesctiptionIm" tabindex="-1" role="dialog" aria-labelledby="#modalDesctiptionImLabel" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
@@ -124,7 +205,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <p class="mb-5" style="text-align: left">
+                                <p class="mb-5 more-modal-text" style="text-align: left">
                                     1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
                                     2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
                                     3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
@@ -151,7 +232,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <p class="mb-5" style="text-align: left">
+                                <p class="mb-5 more-modal-text" style="text-align: left">
                                     1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
                                     2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
                                     3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
@@ -178,7 +259,7 @@
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                 </div>
-                                <p class="mb-5" style="text-align: left">
+                                <p class="mb-5 more-modal-text" style="text-align: left">
                                     1. Обеспечивает рациональную организацию труда среднего и младшего медицинского персонала, повышение их квалификации.<br>
                                     2. Осуществляет своевременную выписку, распределение и хранение перевязочных материалов, медикаментов и др., в том числе ядовитых и наркотических средств, ведет учет их расходования.<br>
                                     3. Контролирует: работу среднего и младшего медицинского персонала по приему и выписке больных; транспортировку больных внутри отделений больницы; выполнение средним медицинским персоналом врачебных
