--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9744,13 +9744,13 @@ a.text-dark:focus, a.text-dark:hover {
 }
 
 .page-section .page-section-heading {
-    font-size: 2.25rem;
+    font-size: 1.25rem;
     line-height: 2rem
 }
 
 @media (min-width: 992px) {
     .page-section .page-section-heading {
-        font-size: 2rem;
+        font-size: 1.5rem;
         line-height: 2.5rem
     }
 }
@@ -10090,4 +10090,26 @@ form .row:first-child .floating-label-form-group {
     border: 1px solid #1c5dbe;
     padding: 10px;
     cursor: pointer;
+}
+
+.more-modal-text {
+    font-size: 1.2rem;
+}
+
+.addition-item {
+    height: 200px;
+    padding: 35px 20px;
+    cursor: pointer;
+    color: #2c3e50;
+    /* background: #48569d; */
+    border-bottom: 1px solid #2c3e50;
+}
+
+.addition-item:hover {
+    background-color: #f9f9f9;
+}
+
+.title-addition-item {
+    text-align: center;
+    font-size: 1.5rem;
 }
