--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -54,17 +54,19 @@
         <div class="container">
             <div class="row justify-content-center">
                 <!-- Portfolio Items-->
-                <div class="col-md-6 col-lg-6 mb-6 professional-description">
+                <div class="col-md-8 col-lg-8 mb-8 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Должностные обязанности<hr></h2>
                     <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
                     <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
-                    <p><span data-toggle="modal" data-target="#modalDesctiptionIm" class="moreButton">Подробнее</span></p>
+                    <div>
+                        <span data-toggle="modal" data-target="#modalDesctiptionIm" class="moreButton">Подробнее</span>
+                    </div>
                 </div>
-                <div class="col-md-6 col-lg-6 mb-6">
-                    <img src="{{ asset('img/professional.jpg') }}" class="work-process">
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <div><img src="{{ asset('img/professional.jpg') }}" class="work-process"></div>
                 </div>
             </div>
         </div>
@@ -74,16 +76,16 @@
         <div class="container">
             <div class="row justify-content-center">
 
-                <div class="col-md-6 col-lg-6 mb-6 professional-description">
+                <div class="col-md-8 col-lg-8 mb-8 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Права<hr></h2>
                     <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
                     <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
-                    <p><span data-toggle="modal" data-target="#modalDesctiptionLaw" class="moreButton">Подробнее</span></p>
+                    <div><span data-toggle="modal" data-target="#modalDesctiptionLaw" class="moreButton">Подробнее</span></div>
                 </div>
-                <div class="col-md-6 col-lg-6 mb-6">
+                <div class="col-md-4 col-lg-4 mb-4">
                     <img src="{{ asset('img/prava.jpg') }}" class="work-process">
                 </div>
             </div>
@@ -93,16 +95,16 @@
     <section class="page-section" id="liability">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-6 mb-6 professional-description">
+                <div class="col-md-8 col-lg-8 mb-8 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Ответственность<hr></h2>
                     <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
                     <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
                     <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
                     <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                     <p>Определяет возможность использования готовых программных продуктов.</p>
-                    <p><span data-toggle="modal" data-target="#modalDesctiptionLiability" class="moreButton">Подробнее</span></p>
+                    <div><span data-toggle="modal" data-target="#modalDesctiptionLiability" class="moreButton">Подробнее</span></div>
                 </div>
-                <div class="col-md-6 col-lg-6 mb-6">
+                <div class="col-md-4 col-lg-4 mb-4">
                     <img src="{{ asset('img/law.jpg') }}" class="work-process">
                 </div>
             </div>
@@ -124,13 +126,13 @@
                 </div>
 
                 <div class="portfolio-modal modal fade" id="modalAdditianalItem1" tabindex="-1" role="dialog" aria-labelledby="#modalAdditianalItem1Label" aria-hidden="true">
-                    <div class="modal-dialog modal-xl" role="document">
+                    <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
                             <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                             <div class="modal-body text-center">
                                 <div class="container">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-8">
+                                        <div class="col-12">
                                             <!-- Portfolio Modal - Title-->
                                             <h2 class="portfolio-modal-title text-secondary mb-0">Товаровед</h2>
                                             <!-- Icon Divider-->
@@ -164,7 +166,6 @@
                                                 <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
                                                 <p>Определяет возможность использования готовых программных продуктов.</p>
                                             </div>
-
                                         </div>
                                     </div>
                                 </div>
@@ -172,9 +173,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
 
                 <div class="col-md-4 col-lg-4 mb-4">
                     <div class="addition-item">
@@ -192,13 +190,13 @@
 
     <!-- Portfolio Modal-->
     <div class="portfolio-modal modal fade" id="modalDesctiptionIm" tabindex="-1" role="dialog" aria-labelledby="#modalDesctiptionImLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="col-12">
                                 <!-- Portfolio Modal - Title-->
                                 <h2 class="portfolio-modal-title text-secondary mb-0">Должностные обязанности</h2>
                                 <!-- Icon Divider-->
@@ -219,14 +217,13 @@
         </div>
     </div><!-- Portfolio Modal-->
     <div class="portfolio-modal modal fade" id="modalDesctiptionLaw" tabindex="-1" role="dialog" aria-labelledby="#modalDesctiptionLawLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title-->
+                            <div class="col-12">
                                 <h2 class="portfolio-modal-title text-secondary mb-0">Права</h2>
                                 <!-- Icon Divider-->
                                 <div class="divider-custom">
@@ -246,13 +243,13 @@
         </div>
     </div>
     <div class="portfolio-modal modal fade" id="modalDesctiptionLiability" tabindex="-1" role="dialog" aria-labelledby="modalDesctiptionLiabilityLabel" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
+                            <div class="col-12">
                                 <!-- Portfolio Modal - Title-->
                                 <h2 class="portfolio-modal-title text-secondary mb-0">Ответственность</h2>
                                 <!-- Icon Divider-->
