fix(public): Выравнивание изображений по центру

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -65,7 +65,7 @@
                         <span data-toggle="modal" data-target="#modalDesctiptionIm" class="moreButton">Подробнее</span>
                     </div>
                 </div>
-                <div class="col-md-4 col-lg-4 mb-4">
+                <div class="col-md-4 col-lg-4 mb-4 d-flex align-items-center">
                     <div><img src="{{ asset('img/professional.jpg') }}" class="work-process"></div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <p>Определяет возможность использования готовых программных продуктов.</p>
                     <div><span data-toggle="modal" data-target="#modalDesctiptionLaw" class="moreButton">Подробнее</span></div>
                 </div>
-                <div class="col-md-4 col-lg-4 mb-4">
+                <div class="col-md-4 col-lg-4 mb-4 d-flex align-items-center">
                     <img src="{{ asset('img/prava.jpg') }}" class="work-process">
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <p>Определяет возможность использования готовых программных продуктов.</p>
                     <div><span data-toggle="modal" data-target="#modalDesctiptionLiability" class="moreButton">Подробнее</span></div>
                 </div>
-                <div class="col-md-4 col-lg-4 mb-4">
+                <div class="col-md-4 col-lg-4 mb-4 d-flex align-items-center">
                     <img src="{{ asset('img/law.jpg') }}" class="work-process">
                 </div>
             </div>
