feat(command): Промежуточный коммит

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -55,11 +55,7 @@
                 <!-- Portfolio Items-->
                 <div class="col-md-6 col-lg-6 mb-6 professional-description">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Должностные обязанности<hr></h2>
-                    <p>Разрабатывать программы, проводить их тестирование и отладку.</p>
-                    <p>Разрабатывать технологию решения задачи, осуществлять выбор языка программирования.</p>
-                    <p>Определять информацию, ее объемы, структуру, макеты и схемы ввода, обработки, хранения и вывода, методы ее контроля.</p>
-                    <p>Разрабатывает инструкции по работе с программами, оформляет необходимую техническую документацию.</p>
-                    <p>Определяет возможность использования готовых программных продуктов.</p>
+                    <p>{{ doljnost }}</p>
                     <p><span data-toggle="modal" data-target="#modalDesctiptionIm" class="moreButton">Подробнее</span></p>
                 </div>
                 <div class="col-md-6 col-lg-6 mb-6">
