--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -40,14 +40,21 @@
     <header class="masthead bg-primary text-white text-center background" style="background-image: url({{ asset('img/rosback8.jpg') }})">
         <div class="container d-flex align-items-center flex-column backtext">
             <h1 class="masthead-heading mb-0">ИНЖЕНЕР-ПРОГРАММИСТ</h1>
-            <!-- Icon Divider-->
-            {#<div class="divider-custom divider-light">
-                <div class="divider-custom-line"></div>
-            </div>#}
-            <!-- Masthead Subheading-->
+
             <p class="pre-wrap masthead-subheading font-weight-light mb-0">Отдел разработки и внедрения информационных систем</p>
         </div>
     </header>
+    {% if boss is defined %}
+        <section class="page-section">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-12 col-lg-12 mb-12">
+                        <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-center">Подчиняется {{ boss }}</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+    {% endif %}
 
     <section class="page-section" id="im">
         <div class="container">
@@ -268,6 +275,28 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row">
+                <!-- Footer Location-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="mb-4">РАЗРАБОТКА</h4>
+                    <p class="pre-wrap lead mb-0">2020 Exiting VIM г. Красноярск</p>
+
+                </div>
+                <!-- Footer Social Icons-->
+                <div class="col-lg-4 mb-5 mb-lg-0">
+                    <h4 class="mb-4"><a style="color: #fff; text-decoration: none" href="{{ path('archive_index') }}">БАЗА ПОЛНЫХ ИНСТРУКЦИЙ</a></h4>
+                </div>
+                <!-- Footer About Text-->
+                <div class="col-lg-4">
+                    <h4 class="mb-4">О ПРОДУКТЕ</h4>
+                    <p class="pre-wrap lead mb-0">Интеллектуальная система для автоматической генерации одностраничных инструкций</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 {% endblock %}
 {% block subjavascripts %}
     {{ parent() }}
